--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
             <artifactId>log4j-core</artifactId>
             <version>2.17.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.jenkins-ci.plugins/git -->
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>git</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
 
 
     </dependencies>
